generated/checkers/refine/KN-Integer-Overflow-768f17fd-0/build_logs/syntax-repair-refine-0-1/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::getMaxBitIndexUpperBound(const clang::Expr*, clang::ento::CheckerContext&, unsigned int&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:131:25: error: operands to ‘?:’ have different types ‘int64_t’ {aka ‘long int’} and ‘llvm::APInt’
  130 |       llvm::APInt V = EvalRes.getExtValue() >= 0
      |                       ~~~~~~~~~~~~~~~~~~~~~~~~~~
  131 |                         ? EvalRes.getExtValue()
      |                         ^~~~~~~~~~~~~~~~~~~~~~~
  132 |                         : llvm::APInt(EvalRes.getBitWidth(), 0);
      |                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:154:27: error: operands to ‘?:’ have different types ‘int64_t’ {aka ‘long int’} and ‘llvm::APInt’
  153 |         llvm::APInt A = Max->getExtValue() >= 0
      |                         ~~~~~~~~~~~~~~~~~~~~~~~
  154 |                           ? Max->getExtValue()
      |                           ^~~~~~~~~~~~~~~~~~~~
  155 |                           : llvm::APInt(Max->getBitWidth(), 0);
      |                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
